Fix an uninitialised variable error

The is_container variable is only initialised if node->name = "container",
otherwise it is uninitialised.

https://bugzilla.gnome.org/show_bug.cgi?id=689701